k8s/tagging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tagging-service
  namespace: cse474-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tagging-service
  template:
    metadata:
      labels:
        app: tagging-service
    spec:
      containers:
        - name: tagging-service
          image: ahmed5577/tagging-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
