k8s/tagging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tagging-service
  namespace: cse474-prod
spec:
  type: ClusterIP
  selector:
    app: tagging-service
  ports:
    - port: 3000
      targetPort: 3000
