k8s/tagging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tagging-ingress
  namespace: cse474-prod
spec:
  rules:
    - host: tagging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tagging-service
                port:
                  number: 3000
